--- a/static/css/basics.css
+++ b/static/css/basics.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    min-width: 375px;
 }
 
 body {
@@ -11,7 +12,7 @@ body {
     background-color: #f0f1ed;
     background-image: url('/static/images/tileable_bg_large.webp');
     background-repeat: repeat;
-    background-size: contain;
+    background-size: cover;
     background-position: top left;
 }
 
@@ -59,4 +60,16 @@ a:visited {
 a:hover {
     color: unset;
     text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    html, body {
+        min-height: 1000px;
+    }
+}
+
+@media (max-width: 480px) {
+    html, body {
+        min-height: 800px;
+    }
 }
