--- a/templates/index.html
+++ b/templates/index.html
@@ -111,6 +111,7 @@ Input Data {% endblock %} {% block body %}
   ></div>
 </div>
 <script src="{{ url_for('static', filename='js/makeFishCards.js')}}"></script>
+<script src="{{ url_for('static', filename='js/updateFishCards.js')}}"></script>
 <script src="{{ url_for('static', filename='js/toggleFishList.js')}}"></script>
 <script>
   // Spin entire site when hemisphere is changed if spin is enabled
