--- a/templates/index.html
+++ b/templates/index.html
@@ -76,10 +76,10 @@ Input Data {% endblock %} {% block body %}
   </div>
 
   <div id="fish_list_container" style="display: none">
-    <div class="fish_count">Total Fish: {{ fish_list|length }}</div>
+    <div class="fish-count">Total Fish: {{ fish-list|length }}</div>
     <div
       id="all_fish_list_container"
-      class="fish_list_container fish_list"
+      class="fish-list-container fish-list"
     ></div>
   </div>
 
@@ -95,12 +95,12 @@ Input Data {% endblock %} {% block body %}
   </div>
 
   <div id="uncaught-fish-list-container" style="display: none">
-    <div class="fish_count">
+    <div class="fish-count">
       Total Uncaught Fish: {{ uncaught_fish|length }}
     </div>
     <div
       id="uncaught_list_container"
-      class="fish_list_container fish_list"
+      class="fish-list-container fish-list"
     ></div>
   </div>
 
