--- a/static/css/fishlist.css
+++ b/static/css/fishlist.css
@@ -18,7 +18,6 @@
 .fish-list {
     max-width: 100%;
     box-sizing: border-box;
-    gap: 0px;
     /* background-color: black; */
     padding-left: 2%;
     padding-right: 2%;
@@ -34,12 +33,11 @@
     min-width: 80px;
     width: 150px;
     height: auto;
-    margin: 0 10px 10px 10px;
+    margin: 0 10px 10px;
     border: 1px solid #ddd;
     border-radius: 16px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 10%);
     transition: transform 0.3s ease;
-
     flex-grow: 1;
     box-sizing: border-box;
 }
