Fixed the typos that broke the site lol

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@ Input Data {% endblock %} {% block body %}
   </div>
 
   <div id="fish_list_container" style="display: none">
-    <div class="fish-count">Total Fish: {{ fish-list|length }}</div>
+    <div class="fish-count">Total Fish: {{ fish_list|length }}</div>
     <div
       id="all_fish_list_container"
       class="fish-list-container fish-list"
