Added cooldown for hemisphere changing with pop up message

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,3 +13,4 @@
 @import url("/static/css/fishlist.css");
 @import url("/static/css/footer.css");
 @import url("/static/css/load-spinner.css");
+@import url("/static/css/popups.css");
