--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,11 +1,14 @@
 .footer {
     display: flex;
-    align-items: center; /* Vertically aligns image and text */
-    justify-content: flex-start; /* Left-aligns the content */
+    align-items: center;
+    /* Vertically aligns image and text */
+    justify-content: flex-start;
+    /* Left-aligns the content */
     width: 100%;
     background-color: #333;
     color: white;
-    text-align: left; /* Ensures text is left-aligned */
+    text-align: left;
+    /* Ensures text is left-aligned */
     padding: 10px 0;
     flex-wrap: wrap;
 }
