--- a/static/css/basics.css
+++ b/static/css/basics.css
@@ -5,6 +5,10 @@ html, body {
     min-width: 375px;
 }
 
+h1, h2, h3 {
+    backdrop-filter: blur(1px)
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -42,9 +46,9 @@ li {
     font-family: Bokutoh_M;
     background-color: #fff;
     margin: 5px 0;
-    padding: 10px;
+    padding: 15px;
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 a {
@@ -66,10 +70,18 @@ a:hover {
     html, body {
         min-height: 1000px;
     }
+
+    li {
+        padding: 12px;
+    }
 }
 
 @media (max-width: 480px) {
     html, body {
         min-height: 800px;
+    }
+
+    li {
+        padding: 10px;
     }
 }
