--- a/static/css/fishlist.css
+++ b/static/css/fishlist.css
@@ -40,13 +40,16 @@
     transition: transform 0.3s ease;
     flex-grow: 1;
     box-sizing: border-box;
-    position: relative; /* Allows absolute positioning of the button */
+    position: relative;
+    /* Allows absolute positioning of the button */
 }
 
 .fish-card-button {
     position: absolute;
-    top: 8px; /* Adjust position */
-    right: 8px; /* Adjust position */
+    top: 8px;
+    /* Adjust position */
+    right: 8px;
+    /* Adjust position */
     padding: 6px 6px;
     background-color: #3498db;
     color: white;
@@ -54,7 +57,8 @@
     border-radius: 50%;
     cursor: pointer;
     transition: all 0.3s ease;
-    opacity: 0; /* Initially hidden */
+    opacity: 0;
+    /* Initially hidden */
     transform: scale(0);
 }
 
@@ -67,7 +71,8 @@
 
 .fish-card:hover .fish-card-button {
     opacity: 1;
-    transform: scale(1); /* Make the button appear with a scaling effect */
+    transform: scale(1);
+    /* Make the button appear with a scaling effect */
 }
 
 
@@ -95,7 +100,8 @@
 }
 
 .fish-card:hover .fish-card-button {
-    opacity: 1; /* Show button when card is hovered */
+    opacity: 1;
+    /* Show button when card is hovered */
 }
 
 .fish-card-info-name {
@@ -171,4 +177,33 @@
     background-size: contain;
     float: left;
     margin-right: 3px;
+}
+
+.suggestions-container {
+    display: flex;
+    flex-direction: column;
+    /* Centers child elements horizontally */
+    align-items: center;
+    width: 100%;
+}
+
+#fish-data {
+    resize: none;
+    display: block;
+    margin: 0 auto;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+#invalid-fish-text {
+    text-align: center;
+}
+
+#invalid-fish-list {
+    max-width: 400px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    list-style-type: none;
+    text-align: left;
 }
