--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -18,8 +18,6 @@ endblock %} {% block body %}
       placeholder="Type here..."
       rows="10"
       cols="50"
-      style="resize: none; display: block; margin: 0 auto; padding: 8px"
-      onkeydown="preventEnter(event);"
     ></textarea>
     <div
       style="
@@ -40,9 +38,15 @@ endblock %} {% block body %}
     </div>
   </form>
 </div>
-<div id="suggestions-container" style="display: none">
-  <h2 id="invalid-fish-text">You entered some invalid fish names</h2>
-  <ul id="invalid-fish-list"></ul>
+<div
+  class="suggestions-container"
+  id="suggestions-container"
+  style="display: none"
+>
+  <h2 id="invalid-fish-text" style="text-align: center">
+    You entered some invalid fish names
+  </h2>
+  <ul class="invalid-fish-list" id="invalid-fish-list"></ul>
 </div>
 <div id="loader" class="loader_spinner_wrapper" style="display: none">
   <div class="loader_spinner"></div>
