--- a/static/css/button.css
+++ b/static/css/button.css
@@ -36,6 +36,27 @@
     transform: translateY(-7px);
 }
 
+.ignore_button_container {
+    letter-spacing: 1.5px;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: #000;
+    background-color: #fff;
+    border: 2px solid #23c483;
+    border-radius: 12px;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    text-align: center;
+    padding: 1px 6px;
+}
+
+.ignore_button_container:hover {
+    background-color: #23c483;
+    color: #fff;
+}
+
+
 @media (max-width: 768px) {
     .button_parent {
         margin-left: 5%;
