--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
     />
   </head>
   <body {% block body_attributes %}{% endblock %}>
+    <div id="loader" class="loader_spinner_wrapper" style="display: none">
+      <div class="loader_spinner"></div>
+    </div> 
     <div class="main-content">
       <div class="settings-menu-options">
         <div id="spin-status" class="light_text"></div>
