--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@ settings-menu" {% endblock %} {% block second_a_attributes %} class="active"
 href="/" {% endblock %} {% block second_a_inner %} Home {% endblock %} {% block
 third_a_attributes %} href="/fish-input"{% endblock %} {% block third_a_inner %}
 Input Data {% endblock %} {% block body %}
+<script src="{{ url_for('static', filename='js/resetImage.js')}}"></script>
 <h1>ACNH Fish Spawning Calendar</h1>
 {% if image_url %}
 <div id="popup" class="popup">
@@ -53,6 +54,16 @@ Input Data {% endblock %} {% block body %}
         </button>
       </div>
       <div class="hemisphere_selection_text">Change Hemispheres</div>
+      <div style="margin-left: auto">
+        <button
+          type="button"
+          id="resetImageButton"
+          class="button_container reset_image"
+          onclick="resetImage()"
+        >
+          Reset Image
+        </button>
+      </div>
     </div>
     <img
       id="image"
@@ -85,6 +96,10 @@ Input Data {% endblock %} {% block body %}
       Show
     </button>
   </div>
+  <script>
+    var allFishList = JSON.parse('{{ fish_list | tojson | safe }}');
+    // console.log(allFishList); // Check in the browser console
+  </script>
 
   <div id="fish_list_container" style="display: none">
     <div class="fish-count">Total Fish: {{ fish_list|length }}</div>
