--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 
-<!-- {% block body_attributes %} style="--fish-count: {{uncaught|length }}" {% endblock %} -->
-{% block first_a_attributes %} class="gear settings-menu" {% endblock %} {%
-block second_a_attributes %} href="/" {% endblock %} {% block second_a_inner %}
-Home {% endblock %} {% block third_a_attributes %} class="active"
-href="/fish-input"{% endblock %} {% block third_a_inner %} Input Data {%
-endblock %} {% block body %}
+{% block input_a_attributes %}
+class="active"
+{% endblock %}
+{% block body %}
 <h1>Enter the fish you have caught (one per line):</h1>
 <div class="flex-wrap display: flex-wrap">
   <form
