Added export page, WIP

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
           <li onclick="clearCachedInput()">
             <a href="/">Clear Cached Input</a>
           </li>
-          <li onclick="exportData()"><a href="/">Export Data</a></li>
+          <li><a href="/export">Export Data</a></li>
         </ul>
       </div>
       <div class="topnav">
