--- a/templates/fish-input.html
+++ b/templates/fish-input.html
@@ -12,6 +12,7 @@ class="active"
     style="display: flex; flex-direction: column; align-items: center"
   >
     <textarea
+      class="txt_area"
       id="fish-data"
       placeholder="Type here..."
       rows="10"
